ingress_rabbitmq.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingrabbit
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules :
  - host: rabbitmq.intellectfabric.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rabbitmq-client
              port:
                number: 5672
